--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        </section> 
     </div>
     <script>
-		console.log(`This site is displaying "Not secure" in your browser to show that we all have insecurities.`)
+		console.log(`Ehmm.....I don't really want to tell you anything, just wanted to spend more time with you.`)
 	</script>
 </body>
 
