--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        </section> 
     </div>
     <script>
-		console.log(`Ehmm.....I don't really want to tell you anything, just wanted to spend more time with you.`)
+		console.log(`Ehmm.....I don't really want to tell you anything, just wanted to spend more time with you. 😊 😋`)
 	</script>
 </body>
 
