--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
        <section class="header">
          <nav class="header__nav">
-           <h3>David</h3>
+           
            <img class="header__nav__ham" src="./img/Hamburger.png"> 
          </nav>      
 		 <div class="header__intro">
@@ -22,14 +22,14 @@
 		   <br><br>
 		   Learn more <a href="https://drive.google.com/file/d/1MNlmBaFjf70Nep9N0OCIq7ZIUxEHOOmE/view?usp=sharing">here</a>. 
 		   </p>
-		   <br><br><br><br>
+		   <br><br><br><br><br><br><br><br>
 		   <p>** Check your console😜</p>
 			
 		</div>
        </section> 
     </div>
     <script>
-		console.log(`Ehmm.....I don't really want to tell you anything, just wanted to spend more time with you. 😊 😋`)
+		console.log(`This site is displaying "Not secure" in your browser to show that we all have insecurities.🙂`)
 	</script>
 </body>
 
