--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          </nav>      
 		 <div class="header__intro">
 			<h1 class="header__intro__name">Hello, <br> I'm David</h1>
-			<p class="header__intro__detail"> I'm a frontend engineer, who build scalable and highly performing web applications, my tools are HTML, CSS, JS and Vue. 
+			<p class="header__intro__detail"> I'm a frontend engineer, who builds scalable and highly performing web applications, my tools are HTML, CSS, JS and Vue. 
 		   <br><br>
 		   Learn more <a href="https://drive.google.com/file/d/1ieF5YX32m3VuwVijkCXD8qZAWm1PAjJv/view?usp=sharing">here</a>. 
 		   </p>
